# tech-hour-1

./: cola.txt  pyproject.toml
app/: main.py  schemas.py
worker/: celery_worker.py
