[tool.poetry]
name = "send-email-service"
version = "0.1.0"
description = ""
authors = ["Vitor Pacheco <vitorpacheco2000@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.2"
celery = "^5.4.0"
uvicorn = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
